# dummy-catalogue

./: .bazelrc  .gitignore  ARCHITECTURE.md  Android-README.md  BUILD  BUILD-COMMANDS.md  COPYING  MODULE.bazel  README.md  WORKSPACE.old  proguard.cfg
src/main/: AndroidManifest.xml
src/main/java/dev/kadcom/commerce/activities/: ProductDetailActivity.java  ProductListActivity.java
src/main/java/dev/kadcom/commerce/adapters/: ProductAdapter.java
src/main/java/dev/kadcom/commerce/models/: ProductItem.java
src/main/java/dev/kadcom/commerce/utils/: ImageLoader.java  StyleUtils.java
src/main/java/dev/kadcom/commerce/views/: AsyncImageView.java  ProductCardView.java
src/main/java/dev/kadcom/dummyjson/client/: DummyJsonClient.java
src/main/java/dev/kadcom/dummyjson/models/: Address.java  Bank.java  Cart.java  CartProduct.java  CartsResponse.java  Company.java  Coordinates.java  Crypto.java  Dimensions.java  Hair.java  MacAddress.java  Product.java  ProductsResponse.java  Review.java  University.java  User.java  UsersResponse.java
src/main/objc/: DJProduct.h  DJProduct.m  DummyJSONClient.h  DummyJSONClient.m
src/test/java/dev/kadcom/dummyjson/: DummyJsonClientTestSuite.java
src/test/java/dev/kadcom/dummyjson/integration/: DummyJsonIntegrationTest.java
src/test/objc/: DummyJSONClientTests.m
